--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="mobile-menu-wraperr container">
           <ul class="mobile-menu-list list">
             <li class="mobile-menu-item">
-              <a href="" class="mobile-menu-link link">Studio</a>
+              <a href="" class="mobile-menu-link link decoration-nav">Studio</a>
             </li>
             <li class="mobile-menu-item">
               <a href="" class="mobile-menu-link link">Portfolio</a>
@@ -472,6 +472,7 @@
     <!--                              footer                  -->
       <footer class="footer">
       <div class="container footer-div">
+        <div class="footer-wrrapeer-position">
         <div class="footer-wrrapper">
         <div class="second-footer-div">
           <a class="link footer-link logo-footer" href="./index.html"
@@ -532,6 +533,8 @@
           </span>
         </form>
       </div>
+      </div>
+     
     </footer>
 
     <!--===================MODAL FORM======================-->
