--- a/portfolio.html
+++ b/portfolio.html
@@ -860,66 +860,71 @@
     </main>
     <footer class="footer">
       <div class="container footer-div">
-        <div class="second-footer-div">
-          <a class="link footer-link logo-footer" href="./index.html"
-            >Web<span class="logo-footer-color">Studio</span></a
-          >
-          <p class="text-footer">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <!---->
-        <div>
-          <h4 class="social-media">Social media</h4>
-          <ul class="list social-icon-list">
-            <li class="social-icon-item footer-icon">
-              <a class="social-link social-link-footer" href=""
-                ><svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use></svg
-              ></a>
-            </li>
-            <li class="social-icon-item footer-icon">
-              <a class="social-link-footer social-link" href=""
-                ><svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use></svg
-              ></a>
-            </li>
-            <li class="social-icon-item footer-icon">
-              <a class="social-link-footer social-link" href=""
-                ><svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use></svg
-              ></a>
-            </li>
-            <li class="social-icon-item footer-icon">
-              <a class="social-link-footer social-link" href=""
-                ><svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use></svg
-              ></a>
-            </li>
-          </ul>
-        </div>
-        <form class="footer-form">
-          <p class="footer-subscribe">Subscribe</p>
+        <div class="footer-wrrapeer-position">
+          <div class="footer-wrrapper">
+            <div class="second-footer-div">
+              <a class="link footer-link logo-footer" href="./index.html"
+                >Web<span class="logo-footer-color">Studio</span></a
+              >
+              <p class="text-footer">
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+              </p>
+            </div>
 
-          <span class="footer-subscribe-wrappper">
-            <input
-              class="footer-input"
-              type="email"
-              name="user_email"
-              required
-              placeholder="E-mail"
-            />
-            <button type="submit" class="btn-footer-subscribe">
-              Subscribe
-              <svg class="telegram-icon" width="24" height>
-                <use href="./images/icons.svg#icon-telegram"></use>
-              </svg>
-            </button>
-          </span>
-        </form>
+            <div class="footer-social-media">
+              <p class="social-media">Social media</p>
+              <ul class="list social-icon-list footer-list">
+                <li class="social-icon-item footer-icon">
+                  <a class="social-link-footer social-link" href=""
+                    ><svg class="social-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                </li>
+                <li class="social-icon-item footer-icon">
+                  <a class="social-link-footer social-link" href=""
+                    ><svg class="social-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="social-icon-item footer-icon">
+                  <a class="social-link social-link-footer" href=""
+                    ><svg class="social-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="social-icon-item footer-icon">
+                  <a class="social-link-footer social-link" href=""
+                    ><svg class="social-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <form class="footer-form">
+            <p class="footer-subscribe">Subscribe</p>
+
+            <span class="footer-subscribe-wrappper">
+              <input
+                class="footer-input"
+                type="email"
+                name="user_email"
+                required
+                placeholder="E-mail"
+              />
+              <button type="submit" class="btn-footer-subscribe">
+                Subscribe
+                <svg class="telegram-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-telegram"></use>
+                </svg>
+              </button>
+            </span>
+          </form>
+        </div>
       </div>
     </footer>
+
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
